src/objects/Post_OP_Notes_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Post OP Notes Forms</relationshipLabel>
        <relationshipName>Post_OP_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Post OP Notes Forms</relationshipLabel>
        <relationshipName>Post_OP_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Post OP Notes Forms</relationshipLabel>
        <relationshipName>Post_OP_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Healing_in_normal_limits__c</fullName>
        <label>Healing in normal limits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Post OP Notes Form</label>
    <nameField>
        <displayFormat>PON-{0000}</displayFormat>
        <label>Post OP Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post OP Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>